# discord-voice-bot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  build.rs  run_pi.sh  setup_pi.sh  update_bot.sh  voice-bot.service
.github/: copilot-instructions.md
.github/workflows/: cd-docker.yml  ci.yml
src/: commands.rs  config.rs  control.rs  discord_bot.rs  main.rs  transcription.rs  vosk_model.rs
src/voice/: mod.rs  receiver.rs
