[package]
name = "discord-voice-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Discord API
serenity = { version = "0.12", features = ["cache", "framework", "standard_framework", "rustls_backend", "model", "client", "gateway", "voice"] }

# Voice support
songbird = { version = "0.4", features = ["builtin-queue", "driver", "gateway"] }

# Async runtime
tokio = { version = "1.28", features = ["macros", "rt-multi-thread", "signal", "fs", "process"] }

# Speech to Text
vosk = "0.2"

# HTTP Server (Control)
warp = "0.3"

# Utilities
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
audiopus = "0.2"
lazy_static = "1.4"
symphonia = { version = "0.5.3", features = ["aac", "mp3", "isomp4", "alac"] } # Audio decoding/encoding helper if needed
