[package]
name = "discord-voice-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Discord library
serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend", "model", "voice"] }
# Voice support
songbird = "0.4"
# Async runtime
tokio = { version = "1", features = ["full"] }
# Vosk speech recognition
vosk = "0.3"
# HTTP client for API calls
reqwest = { version = "0.11", features = ["json"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
# Error handling
anyhow = "1.0"
# Environment variables
dotenv = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
