[package]
name = "discord-voice-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Discord library
serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend", "model", "voice"] }
# Voice support (with audio receiving enabled)
songbird = { version = "0.5", features = ["receive"] }
# Async runtime (required by serenity/songbird)
tokio = { version = "1", features = ["full"] }
# Environment variables
dotenv = "0.15"
# Speech recognition
vosk = "0.3"
# Audio processing
opus = "0.3"

[build-dependencies]
# For build script
ureq = "2"
zip = "7"
